--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ globalchuburna01.sql
 localchuburna01.sql.backup
 globalchuburna01.sql.backup
 ubuntu-14.04.6-server-amd64
+.vs/
+Farmacontrol_PDV/.svn/
+Farmacontrol_PDV/.vs/
