--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ localchuburna01.sql
 globalchuburna01.sql
 localchuburna01.sql.backup
 globalchuburna01.sql.backup
-ubuntu-14.04.6-server-amd64
+ubuntu-14.04.6-server-amd64.iso
 .vs/
 Farmacontrol_PDV/.svn/
 Farmacontrol_PDV/.vs/
