feat: Integración de pagos con terminal BBVA
- Añadido Terminal_helper.cs para comunicación con API de terminal (puerto 5077)
- Añadido DTO_Terminal_Response.cs para deserializar respuestas de la API
- Modificado Principal.cs para inicializar la API al iniciar la aplicación
- Modificado Pago_tipos.cs para procesar pagos con tarjeta de débito/crédito
- Añadidos scripts de inicio/parada de servicios del terminal
- El pago con tarjeta muestra popup de éxito/error según resultado

--- a/Farmacontrol_PDV/Farmacontrol_PDV.csproj
+++ b/Farmacontrol_PDV/Farmacontrol_PDV.csproj
@@ -280,6 +280,7 @@
     <Compile Include="DTO\DTO_Sector.cs" />
     <Compile Include="DTO\DTO_Tae.cs" />
     <Compile Include="DTO\DTO_Terminal.cs" />
+    <Compile Include="DTO\DTO_Terminal_Response.cs" />
     <Compile Include="DTO\DTO_Traspaso.cs" />
     <Compile Include="DTO\DTO_Vale.cs" />
     <Compile Include="DTO\DTO_Valuacion_inventario.cs" />
@@ -1234,6 +1235,7 @@
     <Compile Include="HELPERS\Rest_helper.cs" />
     <Compile Include="HELPERS\Sucursales_helper.cs" />
     <Compile Include="HELPERS\Tae_helper.cs" />
+    <Compile Include="HELPERS\Terminal_helper.cs" />
     <Compile Include="HELPERS\WebServicePac_helper.cs" />
     <Compile Include="Log_error.cs" />
     <Compile Include="Program.cs" />
